# MagisterPy

./: .gitignore  Dockerfile  README.MD  docker-compose.yml  dump.py  monitor_state.json  pyproject.toml  requirements.txt  server.py  start.sh  start.txt
.github/workflows/: release.yaml
MagisterPy/: __init__.py  auth.py  client.py  main.py  models.py  refresh_token.py  response_item.py
MagisterPy/old-but-needed-files/: error_handler.py  jsparser.py  magister_errors.py  magister_session.py  request_manager.py
